<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etLargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_el_largo_del_rect_ngulo"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etAncho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_el_ancho_del_rect_ngulo"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etAngulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_el_ngulo_en_grados"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"/>

</LinearLayout>
